Review Request 5519 simplify job context